// MatieDB — БД «Матье» (PostgreSQL), по модели EF Core MatieAvalonia
// Импорт: https://dbdiagram.io  |  DBML: https://dbml.dbdiagram.io/docs
// В PostgreSQL таблица пользователей называется "User" (здесь для DBML: app_user)

Project MatieDB {
  database_type: 'PostgreSQL'
  Note: 'Салон/запись: пользователи, услуги, записи, мастера, заявки, отзывы'
}

Table Role {
  ID_Role integer [primary key]
  Name varchar(50)
}

Table app_user [note: 'PostgreSQL: таблица "User"'] {
  ID_User integer [primary key]
  Fname varchar(50)
  Name varchar(50)
  Patronymic varchar(50)
  Login varchar(50)
  Password varchar(50)
  Role_id integer [ref: > Role.ID_Role]
  Updated_At timestamp
  Balance decimal(20,2)
}

Table Collection {
  ID_Collection integer [primary key]
  Name varchar(100)
}

Table Services {
  ID_Service integer [primary key]
  Collection_id integer [ref: > Collection.ID_Collection]
  Name varchar(50)
  Description varchar(50)
  Price decimal(7,2)
  Updated_at timestamp
  ImgPath varchar(255)
}

Table BookingStatus {
  ID_BookingStatus integer [primary key]
  Name varchar(50) [note: 'в БД иногда "Name " с пробелом']
}

Table Qualification {
  ID_Qualif integer [primary key]
  Name varchar
  Index integer [note: 'поле Index в модели']
}

Table Master {
  ID_Master integer [primary key]
  User_id integer [ref: > app_user.ID_User]
  Qualif_id integer [ref: > Qualification.ID_Qualif]
}

Table Booking {
  ID_Booking integer [primary key]
  User_id integer [ref: > app_user.ID_User, note: 'клиент']
  Master_id integer [ref: > Master.ID_Master]
  Service_id integer [ref: > Services.ID_Service]
  DateTime timestamp
  Status_id integer [ref: > BookingStatus.ID_BookingStatus]
  Updated_At timestamp
  Type_id integer
}

Table CardUser {
  ID_Card integer [primary key]
  User_id integer [ref: > app_user.ID_User]
  NumberCard varchar(20)
  DateCard timestamp
  CVV varchar(3)
  IsPriority boolean [note: 'в модели; при отсутствии в БД — миграция']
}

Table Reviews {
  ID_Review integer [primary key]
  User_id integer [ref: > app_user.ID_User]
  Service_id integer [ref: > Services.ID_Service]
  Master_id integer [ref: > Master.ID_Master]
  Rating integer
  Comment varchar(255)
  Created_At timestamp
}

Table RequestStatuses {
  ID_Status integer [primary key]
  Name varchar(50)
}

Table Request {
  ID_Request integer [primary key]
  User_id integer [ref: > app_user.ID_User]
  Quialif_id integer [ref: > Qualification.ID_Qualif, note: 'имя поля как в модели (опечатка)']
  Status_id integer [ref: > RequestStatuses.ID_Status]
  Reviewed_At timestamp
  Created_At timestamp
}

// Примеры строк (Records)

Records Role(ID_Role, Name) {
  1, 'Администратор'
  2, 'Клиент'
  3, 'Модератор'
  4, 'Мастер'
}

Records Collection(ID_Collection, Name) {
  1, 'Кастом открытый'
  2, 'Косплей лаб'
}

Records Qualification(ID_Qualif, Name, Index) {
  1, 'Базовый', 1
  2, 'Продвинутый', 2
}

Records app_user(ID_User, Fname, Name, Patronymic, Login, Role_id, Balance) {
  1, 'Иван', 'Иванов', 'Петрович', 'admin', 1, 0.00
  2, 'Мария', 'Петрова', 'Сергеевна', 'client1', 2, 1500.50
}

Records Services(ID_Service, Collection_id, Name, Description, Price) {
  1, 1, 'Демо-стрижка', 'Коротко о услуге', 1500.00
}

Records Master(ID_Master, User_id, Qualif_id) {
  1, 2, 2
}

Records BookingStatus(ID_BookingStatus, Name) {
  1, 'Новая'
  2, 'Подтверждена'
}

Records Booking(ID_Booking, User_id, Master_id, Service_id, Status_id) {
  1, 2, 1, 1, 1
}

Records RequestStatuses(ID_Status, Name) {
  1, 'На рассмотрении'
  2, 'Одобрена'
}
